--- a/Piazza/en.lproj/Localizable.strings
+++ b/Piazza/en.lproj/Localizable.strings
@@ -4,3 +4,6 @@
 "tab.messages" = "Messages";
 "tab.myAds" = "My Ads";
 "tab.profile" = "Profile";
+
+"error.title" = "Whoops, Something went wrong!";
+"error.ok" = "Ok";
